--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<hr />
+<h1> Today's Weather </h1>
+<div class = "weather">
+	<p>{{date}} </p>
+	<h2> {{city}} </h2>
+	<p style="font-size: 20px">{{temp}} °C</p>
+	<p>{{description}} </p>
+<div>	
